fix an issue with the settings z-index

--- a/src/_scss/chunks/_site-footer.scss
+++ b/src/_scss/chunks/_site-footer.scss
@@ -5,7 +5,7 @@
     position: relative;
     display: flex;
     align-items: center;
-    z-index: 1;
+    z-index: 2;
     
     @at-root .site-layout:where(.vers--page, .vers--single-post) #{&} {
         background-color: #fff;
